--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,14 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #ff4500;
     z-index: 1000;
 }
 
 .logo img {
-        height: 50px; /* Adjust the height according to your design */
+        height: 70px; /* Adjust the height according to your design */
         width: auto; /* Keep width proportional to the height */
+        background-color: #ffffff;
 }
 
 .navbar {
@@ -52,7 +53,7 @@ header {
 }
 
 .nav-links a:hover {
-    color: #ff6347;
+    color:#575757;
     border-radius: 5px;
 }
 #search-bar {
@@ -82,7 +83,7 @@ header {
 
 .search-container button {
     padding: 10px 20px;
-    background-color: #333;
+    background-color:#ff4500;
     color: white;
     border: none;
     border-radius: 5px;
@@ -103,18 +104,124 @@ header {
     align-items: center;
     text-align: center;
 }
+ 
+#h1{
+    text-align: center;
+    font-size: 30px;
+    color: #ff4500;
+    padding-top: 10px;
+}
 
-.home-content h1 {
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* 
+#img {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ padding: 10px;
+
+}  */
+
+
+/* .home-content h1 {
     font-size: 50px;
     margin-bottom: 10px;
     color: #ff4500;
+    
 }
 
 .home-content p {
     font-size: 20px;
     margin-bottom: 20px;
     color: #ff4500;
-}
+} */
 
 .calendar {
     display: flex;
@@ -184,7 +291,19 @@ header {
 }
 
 .property-card p {
-    font-size: 16px;
+    font-size: 15px;
+}
+.property-card h3 {
+    font-size: 20px;
+    padding-top: 10px;
+}
+.property-card button{
+    padding: 6px;
+    font-size: medium;
+    background-color: #ff4500;
+    border: 400px;
+    border-radius: 150px;
+    margin-top: 5px;
 }
 .property-card:hover {
     transform: translateY(-5px);
